# avalone.online

./: AGENTS.md  README.md  pyproject.toml
backups/: avalone_20260701_012421.db  avalone_20260701_012651.db  avalone_20260701_081328.db  avalone_20260701_084038.db  avalone_20260701_084413.db  avalone_20260701_084700.db  avalone_20260701_084829.db  avalone_20260701_085035.db  avalone_20260701_085232.db  avalone_20260701_100818.db  avalone_20260701_201328.db  avalone_20260701_202003.db
docs/: avalone-meta.md  commute-scenario.md  identity-architecture.md  operator-context.md  portal-navigation.md  research-insights.md  research.md  runtime.md  tech-stack.md  unified-platform-plan.md  work-v2-spec.md
infra/launchd/: online.avalone.fetch.plist  online.avalone.translate-locations.plist  online.avalone.translate.plist
scripts/: check_hardcoded.py  configure_smtp.py  fetch_jobs.py  migrate_to_unified_db.py  playwright_audit.py  pre_flight.py  translate_jobs.py  translate_locations.py
src/avalone_core/: pyproject.toml
src/avalone_core/avalone_core/: database.py  db.py  device_service.py  glossary.py  glossary_db.py  glossary_service.py  language_service.py  referral_service.py  registry.py  ui_glossary.py
src/avalone_finance/: pyproject.toml
src/avalone_finance/core/: catalog.py  catalog_repository.py  catalog_service.py  constants.py  constants_service.py  currency.py  currency_service.py  db.py  engine.py  external_auth.py  glossary.py  ledger_ops.py  ledger_repository.py  ledger_service.py  money.py  money_account_repository.py  money_account_service.py  security.py  sqlledger.py  tenant.py  tips.py  user_repository.py
src/avalone_finance/web/: app.py
src/avalone_finance/web/api/: accounts.py  admin.py  analytics.py  app_access.py  common.py  dependencies.py  edit.py  entries.py  form.py  misc.py  notifications.py  settings.py
src/avalone_finance/web/templates/: app.html
src/avalone_landing/: config.py
src/avalone_landing/core/: admin_repository.py  admin_service.py  auth_service.py  feedback_repository.py  feedback_service.py  glossary.py  mail_service.py  models.py  role_service.py  user_repository.py  user_service.py  users.py
src/avalone_landing/web/: admin_router.py  app.py  auth.py  auth_controller.py  (+3 more)
tests/: conftest.py  test_device_screen_time.py  test_finance_shell.py  test_job_interactions.py  test_jobs.py  test_multi_session.py  test_referral.py
tests/finance/: test_api_refactor_smoke.py
(+35 files in other folders)
