[project]
name = "avalone-landing"
version = "0.1.0"
description = "Landing/catalog for avalone.online platform apps."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pydantic-settings>=2.7",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "avalone-core @ file:///Users/lucifer/github-work/avalone.online/src/avalone_core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/avalone_landing"]

[tool.uv]
dev-dependencies = [
    "pillow>=12.2.0",
    "pytest>=8.3",
]
